--- a/conclusiones.tex
+++ b/conclusiones.tex
@@ -2,12 +2,18 @@
 \chapter{Conclusiones}
 \label{cap:conclutions}
 
-La garantía de calidad del software puede mejorar considerablemente gracias a las técnicas modernas de análisis, 
-entre las cuales las técnicas de generación automática de tests juegan un papel destacado \cite{Cadar08, Luckow14, Fraser11, Pacheco07, Ma15, Godefroid05, Marinov01, Boyapati02,Godefroid12}. 
-Los enfoques aleatorios y basados en búsqueda han demostrado gran éxito en la generación automática de suites de prueba con excelentes métricas de cobertura y mutación. 
-Sin embargo, su naturaleza aleatoria impide caracterizar con precisión las familias de comportamientos del software que cubren los tests generados. 
-En contraste, las técnicas sistemáticas —como el \emph{model checking}, la ejecución simbólica o la generación exhaustiva acotada— permiten cubrir un conjunto preciso de comportamientos 
-y, por lo tanto, ofrecer garantías de corrección más específicas.
+La calidad del software se puede mejorar considerablemente gracias a las
+técnicas modernas de análisis de software, 
+entre las cuales las técnicas de generación automática de tests presentan un
+potencial destacado.
+%\cite{Cadar08, Luckow14, Fraser11, Pacheco07, Ma15, Godefroid05, Marinov01, Boyapati02,Godefroid12}. 
+Los enfoques más prometedores han demostrado un gran éxito en la generación
+automática de suites de test con excelentes resultados en términos de cobertura
+de código, mutación, y detección de fallas. 
+
+%Sin embargo, su naturaleza aleatoria impide caracterizar con precisión las familias de comportamientos del software que cubren los tests generados. 
+%En contraste, las técnicas sistemáticas —como el \emph{model checking}, la ejecución simbólica o la generación exhaustiva acotada— permiten cubrir un conjunto preciso de comportamientos 
+%y, por lo tanto, ofrecer garantías de corrección más específicas.
 
 En esta tesis abordamos el desafío de la generación automática de datos de prueba de forma exhaustiva y sistemática, 
 especialmente en contextos donde no se dispone de especificaciones formales de las estructuras de datos a probar. 
@@ -16,122 +22,101 @@ reduciendo así la necesidad de intervención manual y maximizando la cobertura 
 
 Para lograr este objetivo, desarrollamos dos técnicas. La primera, presentada en el Capítulo~\ref{cap:builders}, 
 introduce dos algoritmos para la identificación automática de métodos generadores de objetos a partir de la API pública de un módulo: un algoritmo evolutivo y un algoritmo \emph{greedy} o de escalada.
-Ambos algoritmos buscan detectar conjuntos de métodos constructores que permitan generar estructuras desde cero, 
+Ambos algoritmos buscan detectar conjuntos de métodos generadores de objetos, 
 sin requerir intervención manual ni especificaciones formales. 
 Evaluamos estas técnicas en casos de estudios extraídos de la literatura, 
-y los resultados obtenidos muestran que los conjuntos identificados son suficientes y minimales, con tiempos de ejecución razonables. 
-Hasta donde tenemos conocimiento, este constituye el primer trabajo que aborda de manera sistemática y automática el problema de la identificación de constructores, el cual ha sido tradicionalmente resuelto de manera manual.
+y los resultados obtenidos muestran que los conjuntos identificados son
+suficientes, y minimales en la mayoría de los casos, con tiempos de ejecución razonables. 
+Hasta donde tenemos conocimiento, este constituye el primer trabajo que aborda
+de manera sistemática y automática el problema de la identificación de métodos
+generadores de objetos; este problema ha sido tradicionalmente resuelto de manera manual.
 
-Además, mostramos que los conjuntos de constructores obtenidos pueden ser aprovechados por herramientas de generación de tests, facilitando la creación de objetos más grandes y diversos. 
-También técnicas como \emph{model checking} pueden beneficiarse de estos métodos mediante la construcción automática de \emph{drivers} eficientes. 
-Los resultados obtenidos son alentadores y sugieren que esta línea de trabajo sea prometedora.
+Además, mostramos que los generadores de objetos computados automáticamente pueden ser aprovechados por herramientas de generación de tests, facilitando la creación de objetos más grandes y diversos. 
+También mostramos que técnicas como el \emph{model checking} de software pueden beneficiarse de estos métodos mediante la construcción automática de \emph{drivers} eficientes. 
+Los resultados obtenidos son alentadores y sugieren que esta línea de trabajo es prometedora.
 
-Uno de los principales desafíos fue desarrollar una herramienta capaz de generar todas las estructuras posibles hasta un tamaño máximo \(k\), 
-utilizando únicamente los métodos de la API. Si bien la solución implementada funcionó satisfactoriamente en los estudios de caso analizados, 
-sería deseable eliminar elementos de aleatoriedad en la generación para garantizar una cobertura más sistemática. 
-Aunque existen herramientas para generación exhaustiva acotada, ninguna de ellas produce entradas directamente a partir de la API de un módulo, 
-lo cual subraya la originalidad y el valor del enfoque propuesto en este trabajo.
+%Uno de los principales desafíos fue desarrollar una herramienta capaz de generar todas las estructuras posibles hasta un tamaño máximo \(k\), 
+%utilizando únicamente los métodos de la API. Si bien la solución implementada
+%funcionó satisfactoriamente en los casos de estudio analizados, 
+%sería deseable eliminar elementos de aleatoriedad en la generación para garantizar una cobertura más sistemática. 
+%Aunque existen herramientas para generación exhaustiva acotada, ninguna de ellas produce entradas directamente a partir de la API de un módulo, 
+%lo cual subraya la originalidad y el valor del enfoque propuesto en este trabajo.
+
+En esta tesis se mostró también que, una vez identificado un
+conjunto métodos generadores de objetos, es posible aplicar técnicas de generación 
+exhaustiva acotada usando estos métodos (\textsf{BEAPI}), sin necesidad de que el desarrollador
+proporcione manualmente especificaciones formales. La identificación
+de métodos generadores es clave en nuestra propuesta, ya que incrementa significativamente la eficiencia, y la escalabilidad
+respecto de los scopes, de la generación exhaustiva acotada.
 
 La segunda técnica, presentada en el Capítulo~\ref{cap:beapi}, se centra precisamente en la necesidad de contar con una herriamienta
-de generación exhaustiva acotada que produzca entradas de tests y que opere directamente desde la API pública del software bajo prueba (SUT), sin requerir especificaciones formales.
+de generación exhaustiva acotada que produzca entradas para tests y que opere
+directamente con la API pública del software bajo test. 
 Surge entonces BEAPI, que permite generar suites exhaustivas acotadas incluso cuando existen invariantes implícitos, 
-reduciendo la carga de tener que escribir y ajustar especificaciones manualmente.
-Al no existir herramientas de generación exhaustiva que trabajen directamente sobre APIs, BEAPI llena un vacío importante en el área.
+reduciendo la carga de tener que escribir especificaciones adicionales manualmente.
+Al no existir herramientas de generación exhaustiva que trabajen directamente
+sobre las APIs, BEAPI llena un vacío importante en el área.
 
-Gracias a una serie de optimizaciones —incluyendo la identificación automática de rutinas de construcción y un mecanismo de canonización de estados—, 
-BEAPI logra un rendimiento comparable al de la técnica más eficiente basada en especificaciones, Korat \cite{Boyapati02}. 
-Además, identificamos ciertas características de los componentes que los hacen más adecuados para una generación basada en especificaciones o bien para una generación basada en API.
+%Además, identificamos ciertas características de los componentes que los hacen más adecuados para una generación basada en especificaciones o bien para una generación basada en API.
 
 A pesar de que la generación exhaustiva acotada de tests es intrínsecamente combinatoria, 
 el proceso puede volverse eficiente gracias a diversas optimizaciones que propusimos e implementamos. 
-Estas incluyen la generación de secuencias de métodos guiada por retroalimentación, la eliminación de estados redundantes mediante comparación, 
-y el uso de métodos constructores para reducir la explosión combinatoria. 
-Demostramos experimentalmente que estas optimizaciones son cruciales para la escalabilidad de la herramienta, 
-permitiendo a BEAPI alcanzar una eficiencia comparable a la de los enfoques exhaustivos basados en especificaciones.
+Estas incluyen la generación de secuencias de métodos guiada por
+retroalimentación, la eliminación de estados redundantes mediante coincidencia
+de estados, 
+y el uso de métodos generadores de objetos para reducir la explosión combinatoria. 
+Se mostró experimentalmente que estas optimizaciones son cruciales para la escalabilidad de la herramienta, 
+permitiendo a BEAPI alcanzar una eficiencia comparable al de la técnica más eficiente basada en especificaciones, Korat \cite{Boyapati02}.
+%Gracias a una serie de optimizaciones —incluyendo la identificación automática
+%de métodos generadores de objetos y un mecanismo de coincidencia de estados—, 
+%BEAPI logra un rendimiento comparable al de la técnica más eficiente basada en especificaciones, Korat \cite{Boyapati02}. 
 
 Finalmente, mostramos cómo los enfoques basados en especificaciones y BEAPI pueden complementarse entre sí. 
 En particular, ilustramos cómo BEAPI puede utilizarse para evaluar implementaciones de \texttt{repOK}. 
 Siguiendo este enfoque, identificamos errores sutiles en especificaciones tomadas de la literatura. 
-Esto indica que tanto las técnicas que requieren \texttt{repOK} (por ejemplo, \cite{Rosner15}) como aquellas que requieren suites exhaustivas acotadas (por ejemplo, \cite{Molina+2021}) 
-pueden beneficiarse de la técnica presentada.
+Esto indica que tanto las técnicas que requieren especificaciones formales
+(\texttt{repOK}s, como por ejemplo \cite{Rosner15}), tanto como aquellas que requieren suites exhaustivas acotadas (por ejemplo, \cite{Molina+2021}) pueden beneficiarse de la técnica presentada.
 
-En conclusión, este trabajo sienta las bases para una generación exhaustiva acotada de entradas de prueba que, 
-partiendo únicamente de la API pública de un módulo, permite construir conjuntos de tests completos y representativos. 
-Las contribuciones desarrolladas en esta tesis aportan significativamente al aseguramiento de la calidad del software, 
-y abren nuevas perspectivas para la investigación y el desarrollo de herramientas de prueba automatizadas, 
-más efectivas y confiables en contextos reales.
-
-
-\cacho{Traduccion del paper Efficient Bounded Exhaustive Input Generationfrom Program APIs }
-La garantía de calidad del software puede mejorar considerablemente gracias a las técnicas modernas de análisis de software, 
-entre las cuales las técnicas de generación automática de tests juegan un papel destacado \cite{Cadar08, Luckow14, Fraser11, Pacheco07, Ma15, Godefroid05, Marinov01, Boyapati02,Godefroid12}. 
-Los enfoques aleatorios y basados en búsqueda han demostrado un gran éxito en la generación automática de suites de tests con muy buenas métricas de cobertura y mutación, 
-pero su naturaleza aleatoria no permite que estas técnicas caractericen con precisión las familias de comportamientos de software 
-que cubren los tests generados. Las técnicas sistemáticas, como las basadas en \emph{model checking}, ejecución simbólica 
-o generación exhaustiva acotada, cubren un conjunto preciso de comportamientos, y por lo tanto pueden proporcionar garantías 
-de corrección específicas.
-
-En este artículo, presentamos BEAPI, una técnica que busca facilitar la aplicación de una técnica sistemática, 
-la generación exhaustiva acotada de entradas, produciendo estructuras únicamente a partir de la API de un componente, 
-sin necesidad de una especificación formal de las propiedades de las estructuras. BEAPI puede generar suites exhaustivas acotadas 
-a partir de componentes con invariantes implícitos, y reduce la carga de proporcionar especificaciones formales y de ajustar 
-las especificaciones para mejorar la generación. 
-
-Gracias a una serie de optimizaciones, incluyendo la identificación automática de 
-rutinas de construcción y un mecanismo de canonización/igualación de estados, BEAPI puede generar suites exhaustivas acotadas con 
-un rendimiento comparable al de la técnica basada en especificaciones más rápida, Korat \cite{Boyapati02}. También hemos identificado las
-características de un componente que pueden hacerlo más adecuado para una generación basada en especificaciones o para una generación basada en API.
-Al ejercitar directamente la API del software bajo prueba, BEAPI resulta fácil de usar y habilita la generación exhaustiva acotada para software que carece de especificaciones formales de entradas válidas. 
-Al mismo tiempo, la herramienta necesariamente genera entradas positivas verdaderas, en el sentido de que cada entrada producida es efectivamente construible a partir de los métodos públicos del SUT.
+%En conclusión, este trabajo sienta las bases para una generación exhaustiva
+%acotada de entradas para testing que, partiendo únicamente de la API pública de un módulo, permite construir conjuntos de tests completos y representativos. 
+%De esta manera, las contribuciones desarrolladas en esta tesis aportan significativamente al aseguramiento de la calidad del software, 
+%y abren nuevas perspectivas para la investigación y el desarrollo de herramientas de prueba automatizadas, 
+%más efectivas y confiables en contextos reales.
 
 
-Finalmente, hemos mostrado cómo los enfoques basados en especificaciones y BEAPI pueden complementarse entre sí, 
-ilustrando cómo BEAPI puede ser utilizado para evaluar implementaciones de \texttt{repOK}. Utilizando este enfoque, 
-encontramos una serie de errores sutiles en especificaciones \texttt{repOK} tomadas de la literatura. Por lo tanto, 
-las técnicas que requieren especificaciones \texttt{repOK} (por ejemplo, \cite{Rosner15}), así como las técnicas que requieren 
-suites exhaustivas acotadas (por ejemplo, \cite{Molina+2021}), pueden beneficiarse de nuestra técnica de generación presentada.
+
+% TODO: PABLO: Ver después.
+
+%\cacho{Traduccion del paper Efficient Bounded Exhaustive Input Generationfrom Program APIs }
+%La garantía de calidad del software puede mejorar considerablemente gracias a las técnicas modernas de análisis de software, 
+%entre las cuales las técnicas de generación automática de tests juegan un papel destacado \cite{Cadar08, Luckow14, Fraser11, Pacheco07, Ma15, Godefroid05, Marinov01, Boyapati02,Godefroid12}. 
+%Los enfoques aleatorios y basados en búsqueda han demostrado un gran éxito en la generación automática de suites de tests con muy buenas métricas de cobertura y mutación, 
+%pero su naturaleza aleatoria no permite que estas técnicas caractericen con precisión las familias de comportamientos de software 
+%que cubren los tests generados. Las técnicas sistemáticas, como las basadas en \emph{model checking}, ejecución simbólica 
+%o generación exhaustiva acotada, cubren un conjunto preciso de comportamientos, y por lo tanto pueden proporcionar garantías 
+%de corrección específicas.
+%
+%En este artículo, presentamos BEAPI, una técnica que busca facilitar la aplicación de una técnica sistemática, 
+%la generación exhaustiva acotada de entradas, produciendo estructuras únicamente a partir de la API de un componente, 
+%sin necesidad de una especificación formal de las propiedades de las estructuras. BEAPI puede generar suites exhaustivas acotadas 
+%a partir de componentes con invariantes implícitos, y reduce la carga de proporcionar especificaciones formales y de ajustar 
+%las especificaciones para mejorar la generación. 
+%
+%Gracias a una serie de optimizaciones, incluyendo la identificación automática de 
+%rutinas de construcción y un mecanismo de canonización/igualación de estados, BEAPI puede generar suites exhaustivas acotadas con 
+%un rendimiento comparable al de la técnica basada en especificaciones más rápida, Korat \cite{Boyapati02}. También hemos identificado las
+%características de un componente que pueden hacerlo más adecuado para una generación basada en especificaciones o para una generación basada en API.
+%Al ejercitar directamente la API del software bajo prueba, BEAPI resulta fácil de usar y habilita la generación exhaustiva acotada para software que carece de especificaciones formales de entradas válidas. 
+%Al mismo tiempo, la herramienta necesariamente genera entradas positivas verdaderas, en el sentido de que cada entrada producida es efectivamente construible a partir de los métodos públicos del SUT.
+%
+%
+%Finalmente, hemos mostrado cómo los enfoques basados en especificaciones y BEAPI pueden complementarse entre sí, 
+%ilustrando cómo BEAPI puede ser utilizado para evaluar implementaciones de \texttt{repOK}. Utilizando este enfoque, 
+%encontramos una serie de errores sutiles en especificaciones \texttt{repOK} tomadas de la literatura. Por lo tanto, 
+%las técnicas que requieren especificaciones \texttt{repOK} (por ejemplo, \cite{Rosner15}), así como las técnicas que requieren 
+%suites exhaustivas acotadas (por ejemplo, \cite{Molina+2021}), pueden beneficiarse de nuestra técnica de generación presentada.
 
 
-\cacho{Traduccion del paper Automatically Identifying Sufficient Object Builders from Module APIs }
-
-En este trabajo, presentamos un algoritmo evolutivo para detectar automáticamente conjuntos de constructores a partir de la API de un módulo. 
-Evaluamos nuestro algoritmo en varios estudios de caso tomados de la literatura, y encontramos que es capaz de identificar de manera precisa conjuntos de constructores que son suficientes y minimales, 
-en tiempos de ejecución razonables. Hasta donde sabemos, este es el primer trabajo que aborda este problema, el cual suele resolverse de manera manual.
-
-También mostramos resultados preliminares que indican que nuestro enfoque puede ser aprovechado por herramientas de generación de casos de prueba para producir objetos más grandes y diversos. 
-Otras técnicas, como el \emph{software model checking}, también pueden beneficiarse al usar el conjunto identificado de constructores para construir automáticamente drivers eficientes.
-Se necesita realizar más experimentación, pero dado los resultados de este artículo, nuestro enfoque parece muy prometedor.
-
-Uno de los mayores desafíos de este trabajo fue la construcción de una herramienta que nos permitiera generar todas las estructuras acotadas, 
-para un número máximo $k$ de objetos, a partir de los métodos de la API del programa. La solución propuesta funcionó lo suficientemente bien para nuestros estudios de caso, 
-pero sería deseable evitar la aleatoriedad en el proceso. El uso de herramientas de generación exhaustiva acotada en lugar de generación aleatoria se ajustaría mejor a nuestros propósitos \cite{Boyapati02}, 
-pero desafortunadamente ninguna de las herramientas para generación exhaustiva acotada de tests produce entradas a partir de la API de un módulo.
-
-Creemos que una dirección de investigación prometedora, que planeamos explorar más a fondo en trabajos futuros, 
-es adaptar nuestro enfoque presentado para la generación exhaustiva acotada de tests.
-
-Algunos aspectos de nuestro algoritmo genético pueden mejorarse aún más. 
-Por ejemplo, se podría definir una clasificación más poderosa para los tipos de argumentos, en la priorización de métodos de acuerdo con sus complejidades. Además, se podrían incorporar otras dimensiones, 
-como la complejidad del código, para favorecer métodos más simples. Exploraremos esta dirección como trabajo futuro. 
-Asimismo, nuestra implementación del algoritmo genético es, en su mayor parte, una implementación evolutiva por defecto de la librería JGap para Java \cite{jgrapht}. 
-Por supuesto, mejoras al algoritmo evolutivo y un ajuste fino de sus parámetros (por ejemplo, tasa de cruce/mutación) podrían generar tiempos de ejecución más rápidos, 
-por lo que planeamos investigar esto más a fondo en el futuro.
-
-s
-\cacho{Traduccion del paper BEAPI: A Tool for Bounded Exhaustive Input Generation from APIs }
-
-Presentamos BEAPI, una herramienta para la generación exhaustiva acotada de entradas de prueba que se basa únicamente en la API pública del SUT para la generación de tests. 
-Al ejercitar directamente la API del software bajo prueba, BEAPI resulta fácil de usar y habilita la generación exhaustiva acotada para software que carece de especificaciones formales de entradas válidas. 
-Al mismo tiempo, la herramienta necesariamente genera entradas positivas verdaderas, en el sentido de que cada entrada producida es efectivamente construible a partir de los métodos públicos del SUT.
-
-A pesar de que la generación exhaustiva acotada de tests es intrínsecamente combinatoria, 
-el proceso de generación puede hacerse eficiente gracias a diversas optimizaciones en el algoritmo de generación exhaustiva acotada de BEAPI, que hemos propuesto e implementado. 
-Estas optimizaciones incluyen la generación de secuencias de métodos basada en retroalimentación, la eliminación de estados redundantes mediante comparación de estados, y la identificación y posterior uso de métodos constructores para reducir la explosión de secuencias de métodos. 
-Mostramos experimentalmente que las optimizaciones propuestas son cruciales para la eficiencia y escalabilidad de la herramienta, y que permiten a BEAPI alcanzar una eficiencia comparable a la de los enfoques exhaustivos acotados más eficientes basados en especificaciones existentes.
-
-Como trabajo futuro, planeamos evaluar BEAPI frente a otras herramientas de generación de tests de última generación que no son exhaustivas (por ejemplo, Randoop), 
-utilizando benchmarks modernos de la literatura, para evaluar mejor las capacidades de BEAPI (y de la generación exhaustiva acotada en general) 
-frente a otras técnicas de prueba automatizadas.
 
 
 % Como proyección a futuro, planeamos evaluar BEAPI frente a técnicas modernas de generación de pruebas no exhaustivas, como Randoop, utilizando benchmarks recientes de la literatura. 
