--- a/main.tex
+++ b/main.tex
@@ -182,7 +182,9 @@
 \include{related}
 
 \include{conclusiones}
-\include{future}
+
+%\include{future}
+
 % \include{trabajofuturo}
 
 % ********************************************************************
